--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -74,6 +74,10 @@ tasks:
     tags: ["race"]
     name: race
 
+  - <<: *run-build
+    tags: ["test"]
+    name: benchmark
+
 #######################################
 #           Buildvariants             #
 #######################################
