--- a/glide.yaml
+++ b/glide.yaml
@@ -7,5 +7,6 @@ import:
   - package: github.com/evergreen-ci/gimlet
   - package: github.com/tychoish/bond
   - package: github.com/tychoish/lru
+  - package: github.com/mholt/archiver
   - package: github.com/montanaflynn/stats
   - package: github.com/mongodb/amboy
