--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -94,7 +94,7 @@ buildvariants:
   - name: ubuntu1604
     display_name: Ubuntu 16.04
     expansions:
-      build_env: "GOROOT=/opt/go1.8/go PATH=/opt/go1.8/go/bin:$PATH"
+      build_env: "GOROOT=/opt/golang/go1.10/ PATH=/opt/golang/go1.10/bin:$PATH"
     run_on:
       - ubuntu1604-test
     tasks: 
@@ -103,7 +103,7 @@ buildvariants:
   - name: macos
     display_name: macOS 10.12
     expansions:
-      build_env: "GOROOT=/usr/local/go1.8/go PATH=/usr/local/go1.8/go/bin:$PATH DISABLE_COVERAGE=true"
+      build_env: "GOROOT=/opt/golang/go1.10/ PATH=/opt/golang/go1.10/bin:$PATH DISABLE_COVERAGE=true"
     run_on:
       - macos-1012
     tasks:
@@ -114,6 +114,6 @@ buildvariants:
     run_on:
       - windows-64-vs2015-small
     expansions:
-      build_env: "GOROOT=c:/go1.8/go PATH=/cygdrive/c/go1.8/go/bin:$PATH DISABLE_COVERAGE=true"
+      build_env: "GOROOT=c:/golang/go1.10/go PATH=/cygdrive/c/golang/go1.10/go/bin:$PATH DISABLE_COVERAGE=true"
     tasks:
       - name: ".test"
