--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -98,7 +98,7 @@ buildvariants:
   - name: ubuntu1604
     display_name: Ubuntu 16.04
     expansions:
-      build_env: "GOROOT=/opt/golang/go1.10/ PATH=/opt/golang/go1.10/bin:$PATH"
+      build_env: "GOROOT=/opt/golang/go1.11/ PATH=/opt/golang/go1.11/bin:$PATH"
     run_on:
       - ubuntu1604-test
     tasks: 
@@ -113,10 +113,11 @@ buildvariants:
     tasks: 
       - name: ".legacy-check"
 
+
   - name: macos
     display_name: macOS 10.12
     expansions:
-      build_env: "GOROOT=/opt/golang/go1.10/ PATH=/opt/golang/go1.10/bin:$PATH DISABLE_COVERAGE=true"
+      build_env: "GOROOT=/opt/golang/go1.11/ PATH=/opt/golang/go1.11/bin:$PATH DISABLE_COVERAGE=true"
     run_on:
       - macos-1012
     tasks:
@@ -127,6 +128,6 @@ buildvariants:
     run_on:
       - windows-64-vs2015-small
     expansions:
-      build_env: "PATH=/cygdrive/c/golang/go1.10/go/bin:$PATH DISABLE_COVERAGE=true"
+      build_env: "GOROOT=c:/golang/go1.11 PATH=/cygdrive/c/golang/go1.11/bin:$PATH DISABLE_COVERAGE=true"
     tasks:
       - name: ".test"
