--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -79,7 +79,7 @@ tasks:
     name: race
 
   - <<: *run-build
-    tags: ["test"]
+    tags: ["bench"]
     name: benchmark
 
 #######################################
