MAKE-692: update benchmarks for most recent changes (#52)
Benchmarks were timing out due to changes in process behavior. This fixes the issue and adds more checks for process errors if the implementation breaks benchmarks again. Additionally, benchmark has been re-added as a task.

--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -114,7 +114,6 @@ buildvariants:
     tasks: 
       - name: ".legacy-check"
 
-
   - name: macos
     display_name: macOS 10.12
     expansions:
@@ -123,6 +122,7 @@ buildvariants:
       - macos-1012
     tasks:
       - name: ".test"
+      - name: ".bench"
 
   - name: windows
     display_name: Windows
@@ -132,3 +132,4 @@ buildvariants:
       build_env: "GOROOT=c:/golang/go1.11 PATH=/cygdrive/c/golang/go1.11/bin:$PATH DISABLE_COVERAGE=true"
     tasks:
       - name: ".test"
+      - name: ".bench"
