--- a/glide.yaml
+++ b/glide.yaml
@@ -10,3 +10,4 @@ import:
   - package: github.com/mholt/archiver
   - package: github.com/montanaflynn/stats
   - package: github.com/mongodb/amboy
+  - package: github.com/containerd/cgroups
