Vendor github.comurfave/cli

--- a/glide.yaml
+++ b/glide.yaml
@@ -11,3 +11,4 @@ import:
   - package: github.com/montanaflynn/stats
   - package: github.com/mongodb/amboy
   - package: github.com/containerd/cgroups
+  - package: github.com/urfave/cli
