Vendor github.com/evergreen-ci/aviation

--- a/glide.yaml
+++ b/glide.yaml
@@ -12,3 +12,4 @@ import:
   - package: github.com/mongodb/amboy
   - package: github.com/containerd/cgroups
   - package: github.com/urfave/cli
+  - package: github.com/evergreen-ci/aviation
