--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -92,6 +92,10 @@ tasks:
     tags: ["bench"]
     name: benchmark
 
+  - <<: *run-build
+    tags: ["report"]
+    name: lint
+
 #######################################
 #           Buildvariants             #
 #######################################
@@ -103,8 +107,9 @@ buildvariants:
     run_on:
       - archlinux-test
       - archlinux-build
-    tasks: 
+    tasks:
       - name: ".test"
+      - name: ".report"
 
   - name: ubuntu1604
     display_name: Ubuntu 16.04
@@ -113,7 +118,7 @@ buildvariants:
     run_on:
       - ubuntu1604-test
       - ubuntu1604-build
-    tasks: 
+    tasks:
       - name: ".test"
       - name: ".bench"
 
@@ -124,7 +129,7 @@ buildvariants:
     run_on:
       - ubuntu1604-test
       - ubuntu1604-build
-    tasks: 
+    tasks:
       - name: ".legacy-check"
 
   - name: macos
