--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -99,7 +99,7 @@ buildvariants:
   - name: race-detector
     display_name: Race Detector (Arch Linux)
     expansions:
-      build_env: "DISABLE_COVERAGE=true RACE_DETECTOR=true"
+      build_env: "GOROOT=/opt/golang/go1.11/ PATH=/opt/golang/go1.11/bin:$PATH DISABLE_COVERAGE=true RACE_DETECTOR=true"
     run_on:
       - archlinux-test
       - archlinux-build
