--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -72,6 +72,10 @@ tasks:
     name: test-rpc
 
   - <<: *run-build
+    tags: ["test"]
+    name: test-wire
+
+  - <<: *run-build
     tags: ["legacy-check"]
     name: compile-base
 
