--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -83,6 +83,10 @@ tasks:
     tags: ["report"]
     name: lint
 
+  - <<: *run-build
+    tags: ["report"]
+    name: newlint
+
 #######################################
 #           Buildvariants             #
 #######################################
