--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,7 @@
 package: github.com/mongodb/jasper
 import:
   - package: github.com/pkg/errors
-  - package: github.com/satori/go.uuid
+  - package: github.com/golang/uuid
   - package: github.com/stretchr/testify
   - package: github.com/mongodb/grip
   - package: github.com/evergreen-ci/gimlet
