--- a/glide.yaml
+++ b/glide.yaml
@@ -3,19 +3,28 @@ import:
   - package: github.com/pkg/errors
   - package: github.com/golang/uuid
   - package: github.com/stretchr/testify
+  - package: github.com/mongodb/amboy
+  - package: github.com/mongodb/ftdc
   - package: github.com/mongodb/grip
+  - package: github.com/evergreen-ci/aviation
+  - package: github.com/evergreen-ci/birch
   - package: github.com/evergreen-ci/gimlet
+  - package: github.com/evergreen-ci/mrpc
+  - package: github.com/evergreen-ci/poplar
+  - package: github.com/evergreen-ci/service
+  - package: github.com/evergreen-ci/timber
   - package: github.com/tychoish/bond
   - package: github.com/tychoish/lru
   - package: github.com/mholt/archiver
   - package: github.com/montanaflynn/stats
-  - package: github.com/mongodb/amboy
   - package: github.com/containerd/cgroups
+  - package: github.com/opencontainers/runtime-spec
+  - package: github.com/docker/go-units
+  - package: github.com/coreos/go-systemd
+  - package: github.com/godbus/dbus
+  - package: github.com/gogo/protobuf
   - package: github.com/urfave/cli
-  - package: github.com/evergreen-ci/aviation
   - package: github.com/tychoish/mongorpc
-  - package: github.com/mongodb/ftdc
-  - package: github.com/evergreen-ci/timber
   - package: golang.org/x/crypto
   - package: golang.org/x/net
   - package: golang.org/x/sys
@@ -23,4 +32,4 @@ import:
   - package: google.golang.org/genproto
   - package: github.com/golang/protobuf
   - package: go.mongodb.org/go-driver
-  - package: github.com/evergreen-ci/poplar
+  - package: github.com/cheynewallce/tabby
