Integrate Docker with tests

--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -36,6 +36,25 @@ functions:
       add_expansions_to_env: true
       env:
         GOPATH: ${workdir}/gopath
+  setup-docker-image:
+    command: subprocess.exec
+    type: setup
+    params:
+      binary: docker
+      args: ["pull", "ubuntu"]
+  cleanup-docker-containers:
+    command: shell.exec
+    type: setup
+    params:
+      shell: bash
+      script: |
+        docker rm -f $(docker ps -a -q)
+  teardown-docker-image:
+    command: subprocess.exec
+    type: setup
+    params:
+      binary: docker
+      args: ["rmi", "-f", "ubuntu"]
   parse-results:
     command: gotest.parse_files
     type: setup
@@ -118,10 +137,17 @@ task_groups:
     max_hosts: 2
     setup_group:
       - func: get-project
+      - func: setup-docker-image
+        variants:
+          - lint
+          - race-detector
+          - ubuntu1604
     setup_task:
       - func: run-make
         vars: { target: "clean-results" }
     teardown_task:
+      - func: cleanup-docker-containers
+      - func: teardown-docker-image
       - func: parse-results
 
 #######################################
@@ -135,6 +161,7 @@ buildvariants:
       GOROOT: /opt/golang/go1.13
       GO_BIN_PATH: /opt/golang/go1.13/bin/go
       RACE_DETECTOR: true
+      DOCKER_IMAGE: ubuntu
       make_args: -k
     run_on:
       - archlinux-test
@@ -148,6 +175,7 @@ buildvariants:
       DISABLE_COVERAGE: true
       GOROOT: /opt/golang/go1.13
       GO_BIN_PATH: /opt/golang/go1.13/bin/go
+      DOCKER_IMAGE: ubuntu
       make_args: -k
     run_on:
       - archlinux-test
@@ -161,6 +189,7 @@ buildvariants:
       DISABLE_COVERAGE: true
       GOROOT: /opt/golang/go1.11
       GO_BIN_PATH: /opt/golang/go1.11/bin/go
+      DOCKER_IMAGE: ubuntu
       make_args: -k
     run_on:
       - ubuntu1604-test
