MAKE-1315, MAKE-1320, MAKE-1321: add generator for Make, support multiple files and default tags (#184)

--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -67,6 +67,14 @@ tasks:
     tags: ["test"]
     name: test-remote
 
+  - <<: *run-build
+    tags: ["test"]
+    name: test-buildsystem-generator
+
+  - <<: *run-build
+    tags: ["test"]
+    name: test-buildsystem-model
+
   - name: compile-base
     tags: ["legacy-check"]
     commands:
@@ -101,6 +109,14 @@ tasks:
   - <<: *run-build
     tags: ["report"]
     name: lint-testutil
+
+  - <<: *run-build
+    tags: ["report"]
+    name: lint-buildsystem-generator
+
+  - <<: *run-build
+    tags: ["report"]
+    name: lint-buildsystem-model
 
 task_groups:
   - name: lintGroup
