Use latest golangci-lint release (v1.28.1) and enforce doc comments

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -34,3 +34,7 @@ issues:
       linters:
         - gocognit
         - goconst
+
+  # Enforce doc comments on exported types.
+  include:
+    - EXC0002
