Add to CI tests

--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -57,11 +57,15 @@ tasks:
 
   - <<: *run-build
     tags: ["test"]
-    name: test-options
+    name: test-internal-executor
 
   - <<: *run-build
     tags: ["test"]
     name: test-mock
+
+  - <<: *run-build
+    tags: ["test"]
+    name: test-options
 
   - <<: *run-build
     tags: ["test"]
