Only clean up Docker containers/images at the end of the task group

--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -149,7 +149,7 @@ task_groups:
     setup_task:
       - func: run-make
         vars: { target: "clean-results" }
-    teardown_task:
+    teardown_group:
       - func: run-make
         vars: { target: "docker-cleanup" }
         variants:
