--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -132,11 +132,10 @@ task_groups:
     max_hosts: 2
     setup_group:
       - func: get-project
-    setup_task:
-      - func: run-make
-        vars: { target: "clean-results" }
     teardown_task:
       - func: parse-results
+      - func: run-make
+        vars: { target: "clean-results" }
   - name: testGroup
     tasks: [ ".test"]
     max_hosts: 2
@@ -146,7 +145,8 @@ task_groups:
         vars: { target: "docker-setup" }
         variants:
           - ubuntu1604
-    setup_task:
+    teardown_task:
+      - func: parse-results
       - func: run-make
         vars: { target: "clean-results" }
     teardown_group:
@@ -154,7 +154,6 @@ task_groups:
         vars: { target: "docker-cleanup" }
         variants:
           - ubuntu1604
-      - func: parse-results
 
 #######################################
 #           Buildvariants             #
