--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,7 +12,6 @@ linters:
     - gosimple
     - govet
     - ineffassign
-    - maligned
     - misspell
     - staticcheck
     - structcheck
@@ -23,6 +22,12 @@ linters:
 run:
   skip-dirs:
     - build
+
+linter-settings:
+  govet:
+    enable:
+      - fieldalignment
+
 issues:
   exclude-rules:
     - linters:
