EVG-19927: Upgrade go and Evergreen distros.
This upgrades to go 1.20, and makes sure we use newer versions
of our Evergreen distros.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,22 +2,20 @@
 linters:
   disable-all: true
   enable:
-    - deadcode
+    - unused
     - errcheck
     - gocognit
     - goconst
     - gofmt
     - goimports
-    - golint
+    - revive
     - gosimple
     - govet
     - ineffassign
     - misspell
     - staticcheck
-    - structcheck
     - typecheck
     - unconvert
-    - varcheck
 
 run:
   skip-dirs:
