EVG-19927: Code review cleanup and another data race.
This change updates the docker executor to make the wait group for
io accessible on the executor itself. This allows executor_test to
wait until io is done and avoid data races.

Additionally, this fixes a bug in process_blocking where a write
was done under a read lock, and updates a test in manager_test
where checking not empty accessed the underlying object and caused
a data race.

--- a/evergreen.yaml
+++ b/evergreen.yaml
@@ -168,7 +168,7 @@ task_groups:
 #######################################
 buildvariants:
   - name: lint-linux
-    display_name: Lint (Ubuntu 22.04)
+    display_name: Lint
     expansions:
       GOROOT: /opt/golang/go1.20
     run_on:
